fix overflow

--- a/client/src/components/MessageInput/styles.scss
+++ b/client/src/components/MessageInput/styles.scss
@@ -48,9 +48,8 @@
   gap: 10px;
   align-items: center;
   position: absolute;
-  bottom: 1vh;
+  bottom: 50px;
   left: 0;
   right: 30;
   padding: global.$medium;
-
 }
