--- a/client/src/components/MessageList/styles.scss
+++ b/client/src/components/MessageList/styles.scss
@@ -4,10 +4,7 @@
   height: calc(100% - 25px);
   padding: global.$large;
   background-color: white;
-  margin: 30px;
   border-radius: 20px;
-  
-  
 
   .show-users-btn {
     @media (min-width: 768px) {
