--- a/client/src/layouts/styles.scss
+++ b/client/src/layouts/styles.scss
@@ -41,6 +41,7 @@
 .app-content {
   position: relative !important;
   background-color: global.$primary-white;
+  padding: 20px;
 }
 
 .leave-chat-btn {
